--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,48 +7,135 @@
 <body>
 
 <div layout:fragment="content">
-    <div class="jumbotron jumbotron-fluid">
-        <h1 class="display-4">Welcome to Pizza delivery service</h1>
-        <p> Service description</p>
+
+    <div class="container ">
+        <br>
+        <br>
+    </div>
+    <div class="container ">
+        <div class="row">
+            <div align="center" class="col py-6">
+
+                <!-- MODAL BUTTON -->
+                <button type="button" class="btn btn-primary btn-block" data-toggle="modal"
+                        data-target="#exampleModalCenter">
+                    Open cart
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+                     aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLongTitle">Your order</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <table class="table table-striped w-auto" align="center">
+                                    <thead class="ttop">
+                                    <tr class="table-info">
+                                        <td width="20px"><b> №</b></td>
+                                        <td><b>Description</b></td>
+                                        <td width="60px"><b>Price</b></td>
+                                        <td width="60px"><b></b></td>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr th:each="dish,iter : ${dishes}" class="display-6">
+                                        <td th:text=${iter.index}+1>Num</td>
+                                        <td th:text="${dish.description}">Food</td>
+                                        <td th:text="${dish.sum}">Price</td>
+                                        <td>
+                                            <form action="#" th:action="@{/delete/}+${iter.index}" method="get">
+                                                <input class="btn btn-danger btn-sm" type="submit" value="del">
+                                            </form>
+                                        </td>
+                                        </td></tr>
+                                    </tbody>
+                                </table>
+                                <form id="clientForm" action="#" th:action="@{/pay}" th:object="${orderData}"
+                                      method="post">
+
+                                    <div class="form-group">
+                                        <label aling="left" for="name">Name</label>
+                                        <input type="text" class="form-control" id="name" th:field="*{name}">
+                                    </div>
+                                    <div class="form-group">
+                                        <label aling="left" for="mobile">Mobile</label>
+                                        <input type="tel" class="form-control" id="mobile" th:field="*{mobile}">
+                                    </div>
+                                    <div class="form-group">
+                                        <label aling="left" for="address">Delivery address</label>
+                                        <input type="text" class="form-control" id="address" th:field="*{address}">
+                                    </div>
+
+                                </form>
+                            </div>
+
+
+                            <div class="modal-footer">
+                                <div class="container" align="left">
+                                    <td><b>Total: </b></td>
+                                    <td><b th:text="${#aggregates.sum(dishes.![sum])}"/></td>
+                                    <td><b>tg. </b></td>
+                                    <br>
+                                </div>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+
+                                <input class="btn btn-primary" form="clientForm" type="submit"
+                                       value="Proceed to checkout">
+
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
-    <div class="container">
-        <div class="row" style="background:#adb5bd;" >
-            <div class="container" align="center">
-                <form action="#" th:action="@{/showordercart}" method="get">
-                    <input class="btn btn-primary" type="submit" value="Order">
-                </form>
-                <br>
-                <br>
-            </div>
-            <tr th:each="foodtype : ${foodtypes}">
-                <div align="center" class="col-6 col-sm-4">
-                    <form action="#" th:action="@{/addtocart/}+${foodtype.foodTypesID}" method="post">
-                        <table>
-                            <tr>
-                                <td style="width: 200px">
-                                    <h3 th:text="${foodtype.name}" align="center"/>
-                                    <p th:text="${foodtype.price}+' tg.'" align="center"/>
-                                    <p th:text="${foodtype.description}" align="center"/>
-                                </td>
-                                <td style="width: 200px">
+    <div class="container" align="center">
+        <div class="row  row-cols-sm-4">
+            <div th:each="foodtype : ${foodtypes}">
 
-                                    <li th:each="toppings : ${toppingslist}">
-                                        <label th:for="${toppings.name}" th:text="${toppings.name}">topping name</label>
-                                        <input type="checkbox"
-                                               th:name="topping" th:checked="false" th:value="${toppings.name}"/>
-                                        <br>
-                                    </li>
-                                    <input class="btn btn-primary btn-sm" type="submit" value="Add to cart">
-                                </td>
-                            </tr>
-                        </table>
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                            <form action="#" th:action="@{/addtocart/}+${foodtype.foodTypesID}" method="post">
+                                <table>
+                                    <tr>
+                                        <td style="width: 200px">
+                                            <h3 th:text="${foodtype.name}" align="center"/>
+                                            <p th:text="${foodtype.price}+' tg.'" align="center"/>
+                                            <p th:text="${foodtype.description}" align="center"/>
+                                        </td>
+                                        <td style="width: 200px">
 
-                    </form>
+                                            <li th:each="toppings : ${toppingslist}">
+                                                <label th:for="${toppings.name}" th:text="${toppings.name}">topping
+                                                    name</label>
+                                                <input type="checkbox"
+                                                       th:name="topping" th:checked="false"
+                                                       th:value="${toppings.name}"/>
+                                                <br>
+                                            </li>
+                                            <input class="btn btn-primary btn-sm" type="submit" value="Add to cart">
+                                        </td>
+                                    </tr>
+                                </table>
+                            </form>
+                        </div>
+                    </div>
                 </div>
-
-            </tr>
+            </div>
         </div>
     </div>
 
