--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -12,7 +12,7 @@
 <body>
 <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" th:href="@{/index}">Pizza delivery service</a>
+        <a class="navbar-brand" th:href="@{/index}">Pizza delivery service, please choose you favorite pizza</a>
     </nav>
 </header>
 
