--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,10 +8,7 @@
 
 <div layout:fragment="content">
 
-    <div class="container ">
-        <br>
-        <br>
-    </div>
+
     <div class="container ">
         <div class="row">
             <div align="center" class="col py-6">
@@ -112,11 +109,12 @@
 
     <div class="container" align="center">
         <div class="row  row-cols-sm-4">
-            <div th:each="foodtype : ${foodtypes}">
+            <div th:each="foodtype : ${foodtypes}" align="center">
 
                 <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card" style="width: 18rem;" align="center">
+
+                        <img class="card-img-top" th:src="@{/images/marg.jpg}" alt="Card image cap">
                         <div class="card-body">
                             <form action="#" th:action="@{/addtocart/}+${foodtype.id}" method="post">
                                 <table>
@@ -128,7 +126,7 @@
                                         </td>
                                         <td style="width: 200px">
 
-                                            <li th:each="toppings : ${toppingslist}">
+                                            <li th:each="toppings : ${toppingslist}" >
                                                 <label th:for="${toppings.name}" th:text="${toppings.name}">topping
                                                     name</label>
                                                 <input type="checkbox"
