--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,30 +7,32 @@
     <title>Ultimate pizza delivery Admin | Home</title>
 </head>
 <body>
-<div th:replace="header :: header"></div>
-<div class="container">
+<div th:replace="~{header :: header}"></div>
+<div class="container" >
+    <div class="row  row-cols-md-3">
     <h1 class="text-center">Login Page</h1>
     <div th:if="${param.error}" class="alert alert-danger">Invalid username and password.</div>
     <div th:if="${param.logout}" class="alert alert-success">You have been logged out.</div>
     <form th:action="@{/login}" method="post">
         <div class="form-group row">
-            <label for="username" class="col-sm-2 col-form-label">Username</label>
+            <label for="username" class="col-sm-4 col-form-label">Username</label>
             <div class="col-sm-6">
                 <input type="text" id="username" name="username" class="form-control" placeholder="Username" autofocus="autofocus">
             </div>
         </div>
         <div class="form-group row">
-            <label for="password" class="col-sm-2 col-form-label">Password</label>
+            <label for="password" class="col-sm-4 col-form-label">Password</label>
             <div class="col-sm-6">
                 <input type="password" id="password" name="password" class="form-control" placeholder="Password">
             </div>
         </div>
         <div class="form-group row">
-            <div class="col-sm-2">
-                <button type="submit" class="btn btn-primary">Sign in</button>
+            <div class="col-sm-4">
+                <button type="submit" class="btn btn-primary text-nowrap">Sign in</button>
             </div>
         </div>
     </form>
+        </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
