--- a/src/main/resources/templates/credentials-view.html
+++ b/src/main/resources/templates/credentials-view.html
@@ -27,13 +27,13 @@
             </thead>
             <tbody>
                 <tr th:each="customer : ${customers}">
-                    <th scope="row"><a th:href="@{'/customers/credentials/' + ${customer.id}}" th:text="${customer.id}"></a></th>
+                    <th th:text="${customer.id}"></th>
                     <td th:text="${customer.mobile}"></td>
                     <td th:text="${customer.name}"></td>
                     <td th:text="${customer.surname}"></td>
                     <td th:text="${customer.email}"></td>
-                    <td th:text="${customerscredentials.login}"></td>
-                    <td th:text="${customerscredentials.password}"></td>
+                    <td th:text="${customer.customersCredentialsEntity.username}"></td>
+                    <td th:text="${customer.customersCredentialsEntity.password}"></td>
 
                 </tr>
             </tbody>
