--- a/src/main/resources/templates/guests-view.html
+++ b/src/main/resources/templates/guests-view.html
@@ -9,10 +9,7 @@
     <div class="container main-content">
         <div class="row">
             <div class="col-7">
-                <h3>Guests</h3>
-            </div>
-            <div class="col">
-                <a th:href="@{/customers/add}">Add New Customer</a>
+                <h3>Users</h3>
             </div>
         </div>
         <table id="table" class="table table-striped table-sm">
@@ -21,7 +18,11 @@
                 <th scope="col">Phone Number</th>
                 <th scope="col">First</th>
                 <th scope="col">Last</th>
+                <th scope="col">Date of birth</th>
                 <th scope="col">Email Address</th>
+                <th scope="col">Home address</th>
+                <th scope="col">Username</th>
+                <th scope="col">Roles</th>
             </thead>
             <tbody>
                 <tr th:each="customer : ${customers}">
@@ -29,7 +30,12 @@
                     <td th:text="${customer.mobile}"></td>
                     <td th:text="${customer.name}"></td>
                     <td th:text="${customer.surname}"></td>
+                    <td th:text="${customer.DOB}"></td>
                     <td th:text="${customer.email}"></td>
+                    <td th:text="${customer.homeAddress}"></td>
+                    <td th:text="${customer.username}"></td>
+                    <td th:text="${#strings.listJoin(customer.roles, ',')}"></td>
+
                 </tr>
             </tbody>
         </table>
