--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css"/>
     <link rel="stylesheet" href="../static/css/site.css" th:href="@{/css/site.css}"/>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <title layout:title-pattern="$LAYOUT_TITLE | $CONTENT_TITLE">PIZZA SERVICE</title>
+    <title layout:title-pattern="$LAYOUT_TITLE | $CONTENT_TITLE">Ultimate pizza delivery</title>
 </head>
 <body>
 
