--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div th:replace="~{header :: header}"></div>
-<div class="container" >
+<div class="container" align="center" >
     <div class="row  row-cols-md-3">
     <h1 class="text-center">Login Page</h1>
     <div th:if="${param.error}" class="alert alert-danger">Invalid username and password.</div>
