--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -94,7 +94,10 @@
 
 
                                 <input class="btn btn-primary" form="clientForm" type="submit"
-                                       value="Proceed to checkout">
+                                       value="Pay by cash" name="action">
+
+                                <input class="btn btn-primary" form="clientForm" type="submit"
+                                       value="Pay online by card" name="action">
 
 
                             </div>
