--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -52,6 +52,7 @@
                             <label aling="left" for="username">Login</label>
                             <input type="text" class="form-control-sm input-sm" id="username" th:field="*{username}">
                             <span  class="error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">username error</span>
+                            <span  class="error" th:if="${errorUsername!=null}" th:text=="${errorUsername}">username error</span>
                         </div>
                         <div class="form-group">
                             <label aling="left" for="password">Password</label>
