--- a/src/main/resources/static/css/site.css
+++ b/src/main/resources/static/css/site.css
@@ -2,6 +2,13 @@
     padding-top: 60px;
 }
 
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 60px;
+
 .footer{
     position: absolute;
     bottom: 0;
@@ -15,7 +22,8 @@
     padding-top: 8px;
 }
 
-li {
+.container > ul li
+ {
   list-style-type: none;
 }
 
