--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -117,18 +117,19 @@
                 <div class="col">
                     <div class="card" style="width: 18rem;" align="center">
 
+<!--                        BACKUP SIGN-->
+
                         <img class="card-img-top" th:src="@{/images/marg.jpg}" alt="Card image cap">
                         <div class="card-body">
                             <form action="#" th:action="@{/addtocart/}+${foodtype.id}" method="post">
-                                <table>
-                                    <tr>
-                                        <td style="width: 200px">
-                                            <h3 th:text="${foodtype.name}" align="center"/>
-                                            <p th:text="${foodtype.price}+' tg.'" align="center"/>
-                                            <p th:text="${foodtype.description}" align="center"/>
-                                        </td>
-                                        <td style="width: 200px">
+                                <div class="row">
+                                    <h4 th:text="${foodtype.name}" align="center"/>
+                                    <p th:text="${foodtype.price}+' tg.'" align="center"/>
+                                    <div class="col-12 col-sm-6">
 
+                                            <p th:text="${foodtype.description}" align="center"/>
+                                    </div>
+                                    <div class="col-12 col-sm-6">
                                             <li th:each="toppings : ${toppingslist}" >
                                                 <label th:for="${toppings.name}" th:text="${toppings.name}">topping
                                                     name</label>
@@ -138,9 +139,11 @@
                                                 <br>
                                             </li>
                                             <input class="btn btn-primary btn-sm" type="submit"   value="Add to cart">
-                                        </td>
-                                    </tr>
-                                </table>
+
+
+                                    </div>
+                                </div>
+
                             </form>
                         </div>
                     </div>
