--- a/src/main/resources/templates/credentials-view.html
+++ b/src/main/resources/templates/credentials-view.html
@@ -32,8 +32,8 @@
                     <td th:text="${customer.name}"></td>
                     <td th:text="${customer.surname}"></td>
                     <td th:text="${customer.email}"></td>
-                    <td th:text="${customer.customersCredentialsEntity.username}"></td>
-                    <td th:text="${customer.customersCredentialsEntity.password}"></td>
+                    <td th:text="${customer.username}"></td>
+                    <td th:text="${customer.password}"></td>
 
                 </tr>
             </tbody>
